feat: Full project upload including frontend updates, backend, and documentation

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,14 +1,6 @@
 # Supabase Configuration
-# Get these from: https://supabase.com/dashboard/project/YOUR_PROJECT_ID/settings/api
-
-# Your Supabase Project URL
 NEXT_PUBLIC_SUPABASE_URL=https://vmiblbbikkqxynutwucw.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_public_anon_key
 
-# Your Supabase Anon/Public Key
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
-
-# IMPORTANT:
-# 1. Copy this file to .env.local
-# 2. Replace the values with your actual Supabase credentials
-# 3. Never commit .env.local to Git
-# 4. Add these same values in Vercel Dashboard → Project Settings → Environment Variables
+# Socket.IO Backend URL (Production URL from Render/Railway/Tunnel)
+NEXT_PUBLIC_SOCKET_URL=https://your-backend-url.com
