--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,44 @@
+# Dependencies
 node_modules/
+.pnp
+.pnp.js
+
+# Next.js
 .next/
-.env.local
-.env
-.DS_Store
-dist/
+out/
+
+# Production
 build/
+dist/
+
+# Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+frontend/.env.local
+backend/.env
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
+
+# IDE
 .vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Others
+frontend/ip.txt
+frontend/tunnel_*.txt
+frontend/*.log
+backend/*.log
+*.txt
