--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "next": "^15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
